Вывод самых популярных фильмов по жанру и годам. add-most-populars Новые базы не создавал. Напрямую к таблицам не обращался. Использовал существующие возможности.